--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
-h1 {
-  color: red;
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap');
+
+html {
+    font-size: 25px;
+}
+
+body {
+    font-family: "Caveat", cursive;
+    margin: 0;
+    background: rgb(80, 0, 80);
+}
+
+header{
+    padding: 20px;
+    color: white;
+}
+header .logo, .menu, .menu-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+
+header .logo {
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.menu-list {
+    list-style: none;
+}
+
+header a {
+    color: inherit;
+    text-decoration: none;
 }
