--- a/style.css
+++ b/style.css
@@ -35,3 +35,96 @@ header a {
     color: inherit;
     text-decoration: none;
 }
+.container {
+    width: 80%;
+    margin: auto;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 0 100px rgb(9, 227, 100);
+}
+
+h1, h2, h3 {
+    color: #333;
+}
+
+#schedule {
+    display: flex;
+}
+
+#days {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    flex: 1;
+}
+
+#days li {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #eee;
+    margin-bottom: 5px;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    transition: 0.2s;
+}
+
+#days li:hover, #days li.active {
+    background: rgb(80, 0, 80);
+    border: 2px solid rgb(249, 199, 2);
+    color: rgb(249, 199, 2);
+}
+
+#schedule-details {
+    flex: 3;
+    padding: 20px;
+}
+
+#classes, #homework-list {
+    list-style: none;
+    padding: 0;
+}
+#homework {
+    margin-top: 20px;
+}
+
+#homework-list li {
+    background-color: #f9f9f9;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
+#subject-select, #new-homework, #add-class input {
+    padding: 5px;
+    margin-bottom: 10px;
+    display: block;
+    width: 100%;
+    font-family: "Caveat", cursive;
+    font-size: 25px;
+}
+
+#add-homework, #add-class button {
+    padding: 10px 25px;
+    background: rgb(80, 0, 80);
+    color: white;
+    border-radius: 10px;
+    border: 2px solid transparent;
+    transition: 0.4s;
+    font-family: "Caveat", cursive;
+    font-size: 25px;
+}
+
+#add-homework:hover,  #add-class-button:hover {
+    border: 2px solid rgb(249, 199, 2);
+    color: rgb(249, 199, 2);
+    transform: scale(1.1);
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    color: white;
+}
+
+#add-class {
+    margin-top: 20px;
+}
