Add perspective to menu for 3D effect

--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body {
     margin: 0;
     background: rgb(80, 0, 80);
 }
-
+menu{
+    perspective: 10px;
+}
 header{
     padding: 20px;
     color: white;
